fix: wrong color on button (#27)
* fix: wrong color on button

* fix: lint error

* fix: delete css class

--- a/ui/src/components/auth/auth-form.module.css
+++ b/ui/src/components/auth/auth-form.module.css
@@ -4,7 +4,3 @@
     var(--mantine-font-family);
   font-weight: 900;
 }
-
-.button {
-  background-image: linear-gradient(90deg, #222c71 -13.85%, #0c7f98 103.69%);
-}
